# Copyright 2016-2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

if (is_webos) {
  deps = [
    "//neva/webos_impl/pal:pal_webos_impl"
  ]
} else {
  deps = [
    # Default Neva PAL impl
    # This line can be modified by a platform team to build another PAL implementation target
    "//neva/pc_impl/pal:pal_pc_impl"
  ]
}




