# Copyright 2017-2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

config("neva_config") {
  defines = [ "MEDIA_BLINK_IMPLEMENTATION" ]
}

# The list of deps from //media/blink:blink
# which is required by neva target.
# Also platform target should depend on this
group("neva_deps") {
  public_configs = [ ":neva_config" ]
  public_deps = [
    "//base",
    "//cc",
    "//gpu",
    "//media",
    "//media:shared_memory_support",
    "//net",
    "//skia",
    "//third_party/blink/public:blink",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//url",
  ]
}

source_set("neva") {
# This target is a part of //media/blink:blink
# So set visibility to only //media/blink:blink
  visibility = [ "//media/blink" ]

  sources = [
    "media_info_loader.cc",
    "media_info_loader.h",
    "media_player_neva_interface.cc",
    "media_player_neva_interface.h",
    "mediaplayerneva_factory.h",
    "mediaplayerneva_factory_stub.cc",
    "stream_texture_interface.h",
    "video_frame_provider_impl.cc",
    "video_frame_provider_impl.h",
    "video_util_neva.cc",
    "video_util_neva.h",
    "webmediaplayer_mse.cc",
    "webmediaplayer_mse.h",
    "webmediaplayer_neva.cc",
    "webmediaplayer_neva.h",
    "webmediaplayer_neva_factory.h",
    "webmediaplayer_neva_factory.cc",
    "webmediaplayer_params_neva.cc",
    "webmediaplayer_params_neva.h",
  ]

  deps = [ ":neva_deps" ]

  if (is_webos) {
    sources -= [
      "mediaplayerneva_factory_stub.cc",
    ]
    deps += [ "//media/blink/neva/webos" ]
  }
}
