# Copyright 2018 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/linux/pkg_config.gni")
import("//neva/neva.gni")

if (use_gst_media) {
  pkg_config("media_base_webos_config") {
    packages = [ "umedia_api" ]
  }
}

source_set("webos") {
  visibility = [ "//media/base/neva" ]

  deps = [
    "//media/base/neva:neva_deps",
    "//third_party/widevine/cdm:headers",
  ]
  sources = [
    "neva_mime_util_internal_webos.cc",
  ]
  sources += [
    "media_platform_api_webos_stub.cc",
    "media_platform_api_webos_stub.h",
  ]
  if (use_gst_media) {
    configs += [ ":media_base_webos_config" ]
  }
}
